# kata

./: .gitignore  README.md  pyproject.toml
editors/sublime/: Kata.sublime-syntax
editors/vscode/: extension.js  language-configuration.json  package.json
editors/vscode/syntaxes/: kata.tmLanguage.json
examples/: allow-nested-functions.kata  api-design.kata  bad-duplicate-model.kata  bad-empty.kata  bad-fn-arity.kata  bad-fn-duplicate.kata  bad-fn-undefined.kata  bad-missing-body.kata  bad-missing-model.kata  bad-nested-blocks.kata  bad-no-at.kata  bad-no-model.kata  bad-unclosed-block.kata  bad-unknown-directive.kata  codegen.kata  commit-msg.kata  debug.kata  functions-compose.kata  functions.kata  migrate.kata  prevent-recursion.kata  refactor.kata  review.kata  summarize.kata  test-gen.kata  translate.kata
examples/quiz-app/: 1-questions.kata  2-app.kata  3-tests.kata  README.md
output/: api-design.json  codegen.run.json  result.json  test-gen.run.json
output/codegen/: run.json  solution.py  test_solution.py
output/test-gen/: run.json  step_1.ts
src/kata/: __init__.py  __main__.py  ast.py  cli.py  compiler.py  decompiler.py  diagnostics.py  engine.py  lexer.py  lsp.py  parser.py  roles.py  test_compiler.py
