[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kata"
version = "0.1.0"
description = "Kata 型 — a structured programming language targeting LLM inference"
requires-python = ">=3.11"
keywords = ["llm", "programming-language", "prompt-engineering", "compiler"]
license = "ISC"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.40",
]

[project.scripts]
kata = "kata.cli:main"
